--- a/AudioTest/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/AudioTest/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,21 +1,97 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2519" systemVersion="12A206j" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2840" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1856"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1926"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--View Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Number" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V5V-35-jyI">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1000" minValue="1000" maxValue="1351" translatesAutoresizingMaskIntoConstraints="NO" id="ydV-L2-42P"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sb5-r9-QYA">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Play">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="playPressed:" destination="2" eventType="touchUpInside" id="ult-A3-OuI"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Description" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aMC-eO-6sd">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="neJ-To-4nG">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="+">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="plusPressed:" destination="2" eventType="touchUpInside" id="J6J-OJ-OqI"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vMd-C8-ERl">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="-">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="minusPressed:" destination="2" eventType="touchUpInside" id="HPQ-gf-wg8"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="aMC-eO-6sd" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="2RT-Ax-cBc"/>
+                            <constraint firstAttribute="trailing" secondItem="neJ-To-4nG" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="BOh-Ey-tkX"/>
+                            <constraint firstItem="Sb5-r9-QYA" firstAttribute="centerX" secondItem="ydV-L2-42P" secondAttribute="centerX" type="default" id="BUh-sg-o1D"/>
+                            <constraint firstItem="neJ-To-4nG" firstAttribute="baseline" secondItem="Sb5-r9-QYA" secondAttribute="baseline" type="default" id="IUS-ca-cxc"/>
+                            <constraint firstItem="aMC-eO-6sd" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="LPp-Nm-yw9"/>
+                            <constraint firstItem="ydV-L2-42P" firstAttribute="top" secondItem="3" secondAttribute="top" constant="78" type="user" id="LcV-eK-AGE"/>
+                            <constraint firstItem="V5V-35-jyI" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" type="user" id="M5a-5S-bfR"/>
+                            <constraint firstAttribute="trailing" secondItem="V5V-35-jyI" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="UEw-Ke-4sl"/>
+                            <constraint firstItem="vMd-C8-ERl" firstAttribute="top" secondItem="ydV-L2-42P" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="YSJ-da-Mp7"/>
+                            <constraint firstItem="vMd-C8-ERl" firstAttribute="baseline" secondItem="Sb5-r9-QYA" secondAttribute="baseline" type="default" id="gWn-Yv-lcp"/>
+                            <constraint firstItem="ydV-L2-42P" firstAttribute="top" secondItem="aMC-eO-6sd" secondAttribute="bottom" constant="8" symbolic="YES" type="user" id="hUt-J8-5yf"/>
+                            <constraint firstItem="V5V-35-jyI" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="q5O-2o-O8J"/>
+                            <constraint firstAttribute="trailing" secondItem="ydV-L2-42P" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="vVc-JG-nEO"/>
+                            <constraint firstItem="vMd-C8-ERl" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="vbB-i8-RcB"/>
+                            <constraint firstItem="aMC-eO-6sd" firstAttribute="top" secondItem="V5V-35-jyI" secondAttribute="bottom" constant="8" symbolic="YES" type="user" id="w4z-sU-WLG"/>
+                            <constraint firstItem="ydV-L2-42P" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="zLr-4C-8RY"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="descriptionLabel" destination="aMC-eO-6sd" id="FWC-y8-uEp"/>
+                        <outlet property="numberLabel" destination="V5V-35-jyI" id="jxX-qo-BqQ"/>
+                        <outlet property="numberSlider" destination="ydV-L2-42P" id="Sle-OD-sSW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-28" y="33"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
